Test for github page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="home">
-  <h1>Hi, I'm Xiaoya 👋</h1>
+  <h1>{{ homeInfo.title }}</h1>
   <div class="home-details">
-    <p>// My first name can be pronounced as "Shi-ao-ya"</p>
-    <p>// I'm a college student and I love building things</p>
-    <p>// Nice to meet you!</p>
+    <p>{{ homeInfo.details1 }}</p>
+    <p>{{ homeInfo.details2 }}</p>
+    <p>{{ homeInfo.details3 }}</p>
   </div>
 </div>
