--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
 <div class="home">
-  <h1>{{ homeInfo.title }}</h1>
+  <h1 class="anim">{{ homeInfo.title }}</h1>
   <div class="home-details">
-    <p>{{ homeInfo.details1 }}</p>
-    <p>{{ homeInfo.details2 }}</p>
-    <p>{{ homeInfo.details3 }}</p>
+    <p class="anim">{{ homeInfo.details1 }}</p>
+    <p class="anim">{{ homeInfo.details2 }}</p>
+    <p class="anim">{{ homeInfo.details3 }}</p>
   </div>
+
+  <a class="btn-email" href="mailto:xiaoyaxyz@gmail.com">Say Hello</a>
 </div>
