--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,8 @@
-<mat-tab-group mat-align-tabs="end">
+<mat-tab-group mat-align-tabs="center">
   <mat-tab label="Home"><app-home [homeInfo]="home"></app-home></mat-tab>
-  <mat-tab label="About"><app-about></app-about></mat-tab>
-  <mat-tab label="Projects">Content 3</mat-tab>
-  <mat-tab label="Contact">Content 3</mat-tab>
+  <mat-tab label="About"
+    ><app-about [aboutInfo]="about" [listInfo]="tech"></app-about
+  ></mat-tab>
+  <mat-tab label="Experience"><app-experience></app-experience></mat-tab>
+  <mat-tab label="Projects"><app-projects></app-projects></mat-tab>
 </mat-tab-group>
