--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -9,6 +9,72 @@ h4 {
     color: #f4fb68;
 }
 
-.projects {
-  margin: 5% 10%;
+h3 {
+   font-family: 'IBM Plex Mono', monospace;
+   font-size: 20px;
+   font-weight: 600;
+}
+
+.project-card p {
+  font-family: Calibri, sans-serif;
+  font-size: 14px;
+}
+
+.projects-title {
+  margin: 10% 10% 5%;
+  text-align: center;
+}
+
+.projects-details {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.project-card {
+  width: 350px;
+  background-color: #3c3c3c;
+  box-shadow:  inset 0 1px 1px rgba(0,0,0,.075);
+  transition: box-shadow 1s;
+  border: 0.5px solid #5b5b5b;
+  color: #fff;
+  font-family: 'IBM Plex Mono', monospace;
+  letter-spacing: 3px;
+  filter: brightness(75%);
+}
+
+.project-card:hover{
+  border: 0.5px solid #797a66;
+  box-shadow:0 0 10px #6d6d6d;
+  filter: brightness(90%);
+  cursor: pointer;
+}
+
+img {
+  height:260px;
+}
+
+.btn-view {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-view a {
+  border: 1px solid #f4fb68;
+  background-color: #4d4c45;
+  color: #f4fb68;
+  font-size: 18px;
+  margin-top: 5%;
+  border-radius: 5px;
+  padding: 20px 30px;
+  display: inline-block;
+  text-decoration: none;
+  position: relative;
+  cursor: pointer;
+}
+
+.btn-view a:hover {
+  background-color: #43423c;
 }
