--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
-<div class="about">
+<div class="about anim">
   <h4>01.</h4>
   <h2>{{ aboutInfo.title }}</h2>
-  <div class="about-details">
+  <div class="about-details" anim>
     <div class="about-details-text">
       <p>{{ aboutInfo.details }}</p>
       <ul>
