--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,6 @@
     <p class="anim">{{ homeInfo.details1 }}</p>
     <p class="anim">{{ homeInfo.details2 }}</p>
     <p class="anim">{{ homeInfo.details3 }}</p>
+    <a class="btn-email anim" href="mailto:xiaoyaxyz@gmail.com">Say Hello</a>
   </div>
-
-  <a class="btn-email" href="mailto:xiaoyaxyz@gmail.com">Say Hello</a>
 </div>
