--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -35,30 +35,39 @@ h3 {
 .project-card {
   width: 350px;
   background-color: #3c3c3c;
-  box-shadow:  inset 0 1px 1px rgba(0,0,0,.075);
+  /* box-shadow:  inset 0 1px 1px rgba(0,0,0,.075); */
   transition: box-shadow 1s;
-  border: 0.5px solid #5b5b5b;
+  /* border: 0.5px solid #5b5b5b; */
   color: #fff;
   font-family: 'IBM Plex Mono', monospace;
   letter-spacing: 3px;
-  filter: brightness(75%);
+  border: 0.5px solid #797a66;
+  box-shadow:0px 0px 10px #6d6d6d;
 }
 
-.project-card:hover{
-  border: 0.5px solid #797a66;
-  box-shadow:0 0 10px #6d6d6d;
-  filter: brightness(90%);
-  cursor: pointer;
-}
 
 img {
   height:260px;
+}
+
+button {
+  background-color: #3c3c3c;
+  border: none;
+  font-size: 20px;
+  color:#fff;
+  margin-right: 20px;
+}
+
+button:hover {
+  cursor: pointer;
+  color: #07fcf8;
 }
 
 .btn-view {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10%;
 }
 
 .btn-view a {
@@ -77,4 +86,18 @@ img {
 
 .btn-view a:hover {
   background-color: #43423c;
+}
+
+.anim {
+  opacity: 0;
+  transform: translateY(30px);
+  animation: moveup 0.8s linear forwards;
+}
+
+@media only screen and (max-width: 768px){
+  .btn-view a {
+    text-align: center;
+    margin: 2.5rem;
+    width: 100%;
+  }
 }
