--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,11 @@ html, body {
 body { 
   margin: 0; 
   background-color: #3c3c3c;
+opacity: 0.9;
+background-color: #3c3c3c;
+opacity: 0.9;
+background-size: 20px 20px;
+background-image: repeating-linear-gradient(45deg, #384341 0, #384341 2px, #3c3c3c 0, #3c3c3c 50%);
   color: #fff;
 }
 
