--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,7 @@
 <div class="footer">
-  <p>Created by Xiaoya Zou with ❤️</p>
+  <p>
+    Created by Xiaoya Zou with ❤️
+    <i class="fa-brands fa-github" (click)="github()"></i>
+    <i class="fa-brands fa-linkedin-in" (click)="linkedIn()"></i>
+  </p>
 </div>
