--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -29,6 +29,15 @@ h4 {
   color: rgb(233, 233, 233);
 }
 
+#img {
+  transition:0.3s;
+}
+
+#img:hover{
+  transform: translate(0, -10px);
+  cursor: crosshair;
+}
+
 img {
     width: 300px;
     border-radius: 50%;
@@ -92,6 +101,6 @@ li:hover {
   }
   h2{
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 600;
   }
 }
