--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -34,15 +34,20 @@ h3 {
 
 .project-card {
   width: 350px;
+  margin: 0.5rem;
   background-color: #3c3c3c;
   /* box-shadow:  inset 0 1px 1px rgba(0,0,0,.075); */
-  transition: box-shadow 1s;
+  transition: 0.3s;
   /* border: 0.5px solid #5b5b5b; */
   color: #fff;
   font-family: 'IBM Plex Mono', monospace;
   letter-spacing: 3px;
   border: 0.5px solid #797a66;
   box-shadow:0px 0px 10px #6d6d6d;
+}
+
+.project-card:hover{
+  transform: translate(0, -10px);
 }
 
 
@@ -94,10 +99,15 @@ button:hover {
   animation: moveup 0.8s linear forwards;
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 700px){
   .btn-view a {
     text-align: center;
-    margin: 2.5rem;
+    margin: 0.5rem;
     width: 100%;
+  }
+
+  h2 {
+    font-size: 24px;
+    margin-bottom: 10%;
   }
 }
