--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer">
-  <p>
-    Created by Xiaoya Zou with ❤️
-    <i class="fa-brands fa-github" (click)="github()"></i>
-    <i class="fa-brands fa-linkedin-in" (click)="linkedIn()"></i>
-  </p>
+  <p>Design & build by Xiaoya Zou</p>
+  <p>&copy; All rights reserved</p>
+  <i class="fa-solid fa-envelope" (click)="mail()"></i>
+  <i class="fa-brands fa-github" (click)="github()"></i>
+  <i class="fa-brands fa-linkedin-in" (click)="linkedIn()"></i>
 </div>
