--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,8 @@
     <p class="anim">{{ homeInfo.details1 }}</p>
     <p class="anim">{{ homeInfo.details2 }}</p>
     <p class="anim">{{ homeInfo.details3 }}</p>
-    <a class="btn-email anim" href="mailto:xiaoyaxyz@gmail.com">Say Hello</a>
+    <a class="btn-email anim" href="mailto:xiaoyaxyz@gmail.com"
+      ><i class="fa-solid fa-envelope"></i>Say Hello</a
+    >
   </div>
 </div>
