--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,6 @@
 .home{
-  margin: 15%;
+  margin: 20%;
+  text-align: center;
 }
 
 .home h1 {
@@ -7,6 +8,7 @@
   font-size: 60px;
   font-weight: 600;
 }
+
 
 .home-details {
   margin-top: 6%;
@@ -16,9 +18,9 @@
 }
 
 .btn-email {
-  border: 1px solid #f4fb68;
-  background-color: #4d4c45;
-  color: #f4fb68;
+  border: 1px solid #04fccb;
+  background-color: #3c3c3c;
+  color: #04fccb;
   font-size: 18px;
   margin-top: 5%;
   border-radius: 5px;
@@ -34,7 +36,11 @@
 }
 
 a:hover {
-  background-color: #43423c;
+  background-color: #3c4341;
+}
+
+i {
+  margin-right: 16px;
 }
 
 .home-details p {
