--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -21,7 +21,7 @@ p {
 }
 
 .projects-title {
-  margin: 10% 10% 5%;
+  margin: 5% 10% 5%;
   text-align: center;
 }
 
@@ -38,11 +38,10 @@ p {
   background-color: #3c3c3c;
   /* box-shadow:  inset 0 1px 1px rgba(0,0,0,.075); */
   transition: 0.3s;
-  /* border: 0.5px solid #5b5b5b; */
   color: #fff;
   font-family: 'NTR', sans-serif;
-  border: 0.5px solid #797a66;
-  box-shadow:0px 0px 10px #6d6d6d;
+  /* border: 0.5px solid #3c3c3c; */
+  box-shadow:0px 0px 8px #1a1a1a;
 }
 
 .project-card:hover{
@@ -58,13 +57,13 @@ button {
   background-color: #3c3c3c;
   border: none;
   font-size: 20px;
-  color:#fff;
+  color:#04fccb;
   margin-right: 20px;
 }
 
 button:hover {
   cursor: pointer;
-  color: #04fccb;
+  color: #fff;
 }
 
 .btn-view {
