Fix typo on experience page

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -14,8 +14,8 @@
         <div class="job-details">
           <ul>
             <li>
-              Worked with the RPDU (Rapid Protptype Development Unit) team to
-              build low-code solutions
+              Worked with the RPDU (Rapid Prototype Design Unit) team to build
+              low-code solutions
             </li>
             <li>
               Worked with the same team to build websites with ASP.NET MVC,
