--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,11 @@
 .home{
-  margin: 20% 10% 0 10%;
+  margin: 15% 10% 10% 10%;
   text-align: center;
 }
 
 .home h1 {
   font-family: 'IBM Plex Mono', monospace;
-  font-size: 60px;
+  font-size: 48px;
   font-weight: 600;
 }
 
@@ -13,7 +13,7 @@
 .home-details {
   margin-top: 6%;
   font-weight: 200;
-  font-size:22px;
+  font-size:16px;
   animation-delay: 3s;
 }
 
