--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,3 +1,20 @@
 * {
       font-family: 'IBM Plex Mono', monospace; 
 }
+
+.regular-tab {
+      display: block;
+}
+
+  .mobile-tab{
+      display: none;
+  }
+
+@media only screen and (max-width: 768px){
+  .regular-tab {
+      display: none;
+  }
+  .mobile-tab {
+      display: block;
+}
+}
