--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,6 +1,10 @@
+.projects {
+    margin: 5% 10% 0 10%;
+}
+
 h2 {
   font-family: 'IBM Plex Mono', monospace;
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 600;
 }
 
@@ -11,30 +15,30 @@ h4 {
 
 h3 {
    font-family: 'IBM Plex Mono', monospace;
-   font-size: 20px;
+   font-size: 16px;
    font-weight: 600;
 }
 
 p {
-  font-size: 20px;
+  font-size: 16px;
   font-family: 'NTR', sans-serif;
 }
 
 .projects-title {
-  margin: 5% 10% 5%;
+  margin: 5%;
   text-align: center;
 }
 
-.projects-details {
+.card-group {
   justify-content: center;
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 5px;
 }
 
 .project-card {
-  width: 350px;
-  margin: 0.5rem;
+  max-width: 220px;
+  margin: 0.2rem;
   background-color: #3c3c3c;
   /* box-shadow:  inset 0 1px 1px rgba(0,0,0,.075); */
   transition: 0.3s;
@@ -42,21 +46,25 @@ p {
   font-family: 'NTR', sans-serif;
   /* border: 0.5px solid #3c3c3c; */
   box-shadow:0px 0px 8px #1a1a1a;
+  margin-bottom: 20px;
 }
 
 .project-card:hover{
   transform: translate(0, -10px);
 }
 
+.projects-details {
+  margin-bottom: 20px;
+}
 
 img {
-  height:260px;
+  height:180px;
 }
 
 button {
   background-color: #3c3c3c;
   border: none;
-  font-size: 20px;
+  font-size: 18px;
   color:#04fccb;
   margin-right: 20px;
 }
@@ -76,10 +84,10 @@ button:hover {
   border: 1px solid #04fccb;
   background-color: #3c3c3c;
   color: #04fccb;
-  font-size: 18px;
+  font-size: 16px;
   margin-top: 5%;
   border-radius: 5px;
-  padding: 20px 30px;
+  padding: 18px 25px;
   display: inline-block;
   text-decoration: none;
   position: relative;
@@ -97,6 +105,14 @@ button:hover {
 }
 
 @media only screen and (max-width: 700px){
+  .project-card{ 
+    max-width: 400px;
+  }
+
+  img {
+    height: 230px;
+  }
+
   .btn-view a {
     text-align: center;
     margin: 0.5rem;
