--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;400;600&family=NTR&display=swap');
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 html, body { 
   height: 100%;
