--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,5 +1,5 @@
 .about{
-  margin: 9%;
+  margin: 9% 20%;
 }
 
 
@@ -22,20 +22,11 @@ h4 {
 
 .about-details-text {
   margin-top: 2%;
-  font-weight: 200;
-  font-size:16px;
-  line-height: 1.6;
+  font-size:22px;
+  line-height: 1.3;
   width:60%;
   color: rgb(233, 233, 233);
-}
-
-#img {
-  transition:0.3s;
-}
-
-#img:hover{
-  transform: translate(0, -10px);
-  cursor: crosshair;
+  font-family: 'NTR', sans-serif;
 }
 
 img {
@@ -43,12 +34,22 @@ img {
     border-radius: 50%;
     filter: brightness(90%);
     height: 200px;
+    box-shadow:0px 0px 16px #2b2b2b;
+    transition:0.3s;
+}
+
+img:hover{
+    transform: translate(0, -10px);
+    cursor: crosshair;
+    box-shadow:0px 0px 22px #1a1a1a;
 }
 
 
 ul {
     margin-left: 0;
     padding: 0;
+    font-size: 18px;
+    line-height: 1.4;
 }
 
 li {
@@ -81,8 +82,8 @@ li:hover {
     font-size: 26px;
   }
 
-  .home-details {
-    font-size: 16px;
+  .about-details {
+    margin-bottom: 10%;
   }
 
   #img {
@@ -103,4 +104,5 @@ li:hover {
     font-size: 24px;
     font-weight: 600;
   }
+
 }
