--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,5 +1,5 @@
 .projects {
-    margin: 5% 10% 0 10%;
+    margin: 5% 10% 5% 10%;
 }
 
 h2 {
@@ -33,7 +33,7 @@ p {
   justify-content: center;
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 10px;
 }
 
 .project-card {
@@ -51,6 +51,7 @@ p {
 
 .project-card:hover{
   transform: translate(0, -10px);
+  box-shadow:0px 0px 16px #1a1a1a;
 }
 
 .projects-details {
